folder structuring and image convertion to webp

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="nios.css">
+    <link rel="stylesheet" href="css/nios.css">
     <title>NIOS ADMISSION</title>
 </head>
 <body>
@@ -13,13 +13,13 @@
                 Email Us: admin@niosadmissiondelhi.com  | Hotline: 9999150075, 9958050075
             </div>
             <div class="inst">
-                <img src="insta.jpg" alt="img" height="20px" style="margin-right: 10px;">
-                <img src="face.png" alt="img" height="20px">
+                <img src="img/insta.webp" alt="img" height="20px" style="margin-right: 10px;">
+                <img src="img/face.webp" alt="img" height="20px">
             </div>
         </nav>
         <header>
             <div class="logo">
-                <img src="logo.png" alt="img" height="78px" width="55%" >
+                <img src="img/logo.webp" alt="img" height="78px" width="55%" >
             </div>
             <div class="list">
                 <ul>
@@ -130,25 +130,25 @@
             </div>
             <div class="popular_course_card">
                 <div class="NIOS_10t_Class_admission">
-                    <img src="crd1.jpg" alt="img" height="150px" width="80%"><br>
+                    <img src="img/crd1.webp" alt="img" height="150px" width="80%"><br>
                     <h3 style="margin-bottom: 5px;color: blue;">NIOS 10th Class Admission</h3>
                     <p>NIOS 10th Class offers flexible <br> learning for students looking to  <br>complete their secondary education. <br> 
                         Apply for online admission today and  <br>secure your future.</p>
                 </div>
                 <div class="NIOS_12t_Class_admission">
-                    <img src="crd2.jpg" alt="img" height="159px" width="80%"><br>
+                    <img src="img/crd2.webp" alt="img" height="159px" width="80%"><br>
                     <h3 style="margin-bottom: 5px;color: blue;">NIOS 12th Class Admission</h3>
                     <p>NIOS 12th Class is ideal for students <br> who want to continue their senior <br> secondary education. Enroll now for 
                          <br>the 12th class with a flexible <br> schedule and a wide choice of <br> subjects.</p>
                 </div> 
                 <div class="NIOS_On-Demand_Examination">
-                    <img src="crd3.jpeg" alt="img" height="175px" width="80%" style="margin-bottom: 9px;"><br>
+                    <img src="img/crd3.jpeg" alt="img" height="175px" width="80%" style="margin-bottom: 9px;"><br>
                     <h3 style="margin-bottom: 9px;color: blue;">NIOS On-Demand Examination</h3>
                     <p>NIOS On-Demand 10th Class is an <br> excellent option for learners who wish <br> to complete their secondary <br> 
                         education students can choose their <br> exam dates as per their preparation <br> call 9999150075 for admissions.</p>
                 </div> 
                 <div class="University_Distance_Courses">
-                    <img src="crd4.jpg" alt="img" height="230px" width="80%" style="margin-bottom: 9px;"><br>
+                    <img src="img/crd4.webp" alt="img" height="230px" width="80%" style="margin-bottom: 9px;"><br>
                     <h3 style="margin-bottom: 10px;color: blue;">University Distance Courses</h3>
                     <p>We also offer distance learning <br> courses for higher education, ideal <br> for students who wish to pursue <br>
                          graduation without attending regular  <br>college.</p>
@@ -159,7 +159,7 @@
         </div>
         <div class="online_admission">
             <div class="online_image">
-                <img src="nios admission.jpg" alt="img" height="550px" width="100%">
+                <img src="img/nios admission.webp" alt="img" height="550px" width="100%">
             </div>
             <div class="online_apply">
                 <h5 style="color: blue; font-size: 20px;">ADMISSION GOING ON</h5>
@@ -246,7 +246,7 @@
         <footer>
             <div class="iccc">
                 <div class="pimag">
-                    <img src="logo.png" alt="img" height="60px" width="60%" style="border-radius: 10px;"><br><br>
+                    <img src="img/logo.webp" alt="img" height="60px" width="60%" style="border-radius: 10px;"><br><br>
                     <p style="line-height: 30px;">Established in the year 1994, Nios admission delhi Education <br> Care Centre in GTB Nagar, Delhi is a best player in the
                          <br> category of Open School Admission Consultants in Delhi. This <br> well-known establishment acts as a one-stop destination
                           <br> servicing customers both locally and from other parts of Delhi.</p>
