--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                          <br>the 12th class with a flexible <br> schedule and a wide choice of <br> subjects.</p>
                 </div> 
                 <div class="NIOS_On-Demand_Examination">
-                    <img src="img/crd3.jpeg" alt="img" height="175px" width="80%" style="margin-bottom: 9px;"><br>
+                    <img src="img/crd3.webp" alt="img" height="175px" width="80%" style="margin-bottom: 9px;"><br>
                     <h3 style="margin-bottom: 9px;color: blue;">NIOS On-Demand Examination</h3>
                     <p>NIOS On-Demand 10th Class is an <br> excellent option for learners who wish <br> to complete their secondary <br> 
                         education students can choose their <br> exam dates as per their preparation <br> call 9999150075 for admissions.</p>
